# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: day_01_bench.rs  day_02_bench.rs  day_08_bench.rs  day_09_bench.rs
src/: lib.rs  util.rs
src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs
src/util/: a_star.rs  circular_list.rs  union_find.rs
